--- a/2 - Data structures.ipynb
+++ b/2 - Data structures.ipynb
@@ -102,9 +102,9 @@
       " [1] top-level scope",
       "   @ In[3]:1",
       " [2] eval",
-      "   @ ./boot.jl:360 [inlined]",
+      "   @ .\\boot.jl:373 [inlined]",
       " [3] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
-      "   @ Base ./loading.jl:1094"
+      "   @ Base .\\loading.jl:1196"
      ]
     }
    ],
@@ -391,13 +391,13 @@
       "",
       "Stacktrace:",
       " [1] getindex(h::Dict{String, String}, key::Int64)",
-      "   @ Base ./dict.jl:482",
+      "   @ Base .\\dict.jl:481",
       " [2] top-level scope",
       "   @ In[13]:1",
       " [3] eval",
-      "   @ ./boot.jl:360 [inlined]",
+      "   @ .\\boot.jl:373 [inlined]",
       " [4] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
-      "   @ Base ./loading.jl:1094"
+      "   @ Base .\\loading.jl:1196"
      ]
     }
    ],
@@ -744,10 +744,10 @@
      "data": {
       "text/plain": [
        "4×3 Matrix{Float64}:\n",
-       " 0.392655  0.340897  0.736004\n",
-       " 0.887521  0.625563  0.225457\n",
-       " 0.123646  0.215211  0.435754\n",
-       " 0.563704  0.564539  0.0301484"
+       " 0.832361  0.410755   0.680145\n",
+       " 0.546055  0.0133242  0.927467\n",
+       " 0.794817  0.484735   0.643749\n",
+       " 0.515704  0.362389   0.00819137"
       ]
      },
      "execution_count": 24,
@@ -769,16 +769,16 @@
       "text/plain": [
        "4×3×2 Array{Float64, 3}:\n",
        "[:, :, 1] =\n",
-       " 0.855458  0.180741   0.480692\n",
-       " 0.888806  0.852159   0.62636\n",
-       " 0.708986  0.0526796  0.779808\n",
-       " 0.499323  0.18727    0.0843665\n",
+       " 0.00416234  0.114337   0.724275\n",
+       " 0.485864    0.904141   0.854962\n",
+       " 0.781523    0.0540048  0.035601\n",
+       " 0.388007    0.503086   0.782741\n",
        "\n",
        "[:, :, 2] =\n",
-       " 0.641847  0.292116  0.0178846\n",
-       " 0.359826  0.9608    0.245789\n",
-       " 0.746938  0.389501  0.944762\n",
-       " 0.386954  0.391897  0.0875665"
+       " 0.845635  0.0623571  0.935621\n",
+       " 0.996025  0.802627   0.814658\n",
+       " 0.429929  0.446944   0.7158\n",
+       " 0.835365  0.425721   0.0884212"
       ]
      },
      "execution_count": 25,
@@ -1037,14 +1037,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a_ray = [1, 2, 3]\n",
+    "push!(a_ray, 4)\n",
+    "pop!(a_ray)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1079,10 +1094,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "MethodError: \u001b[0mCannot `convert` an object of type \u001b[92mInt64\u001b[39m\u001b[0m to an object of type \u001b[91mString\u001b[39m\n\u001b[0mClosest candidates are:\n\u001b[0m  convert(::Type{String}, \u001b[91m::String\u001b[39m) at C:\\Users\\drtghosh\\AppData\\Local\\Programs\\Julia-1.7.1\\share\\julia\\base\\essentials.jl:223\n\u001b[0m  convert(::Type{T}, \u001b[91m::T\u001b[39m) where T<:AbstractString at C:\\Users\\drtghosh\\AppData\\Local\\Programs\\Julia-1.7.1\\share\\julia\\base\\strings\\basic.jl:231\n\u001b[0m  convert(::Type{T}, \u001b[91m::AbstractString\u001b[39m) where T<:AbstractString at C:\\Users\\drtghosh\\AppData\\Local\\Programs\\Julia-1.7.1\\share\\julia\\base\\strings\\basic.jl:232\n\u001b[0m  ...",
+     "output_type": "error",
+     "traceback": [
+      "MethodError: \u001b[0mCannot `convert` an object of type \u001b[92mInt64\u001b[39m\u001b[0m to an object of type \u001b[91mString\u001b[39m\n\u001b[0mClosest candidates are:\n\u001b[0m  convert(::Type{String}, \u001b[91m::String\u001b[39m) at C:\\Users\\drtghosh\\AppData\\Local\\Programs\\Julia-1.7.1\\share\\julia\\base\\essentials.jl:223\n\u001b[0m  convert(::Type{T}, \u001b[91m::T\u001b[39m) where T<:AbstractString at C:\\Users\\drtghosh\\AppData\\Local\\Programs\\Julia-1.7.1\\share\\julia\\base\\strings\\basic.jl:231\n\u001b[0m  convert(::Type{T}, \u001b[91m::AbstractString\u001b[39m) where T<:AbstractString at C:\\Users\\drtghosh\\AppData\\Local\\Programs\\Julia-1.7.1\\share\\julia\\base\\strings\\basic.jl:232\n\u001b[0m  ...",
+      "",
+      "Stacktrace:",
+      " [1] setindex!(h::Dict{String, String}, v0::Int64, key::String)",
+      "   @ Base .\\dict.jl:381",
+      " [2] top-level scope",
+      "   @ In[37]:1",
+      " [3] eval",
+      "   @ .\\boot.jl:373 [inlined]",
+      " [4] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "   @ Base .\\loading.jl:1196"
+     ]
+    }
+   ],
+   "source": [
+    "myphonebook[\"Emergency\"] = 911"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1098,14 +1134,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dict{String, Any} with 2 entries:\n",
+       "  \"Jenny\"        => 8675309\n",
+       "  \"Ghostbusters\" => \"555-2368\""
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flexible_phonebook = Dict(\"Jenny\" => 8675309, \"Ghostbusters\" => \"555-2368\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1135,14 +1186,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "911"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flexible_phonebook[\"Emergency\"] = 911"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1164,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1202,15 +1266,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.6.0",
+   "display_name": "Julia 1.7.1",
    "language": "julia",
-   "name": "julia-1.6"
+   "name": "julia-1.7"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.6.3"
+   "version": "1.7.1"
   }
  },
  "nbformat": 4,
