--- a/10 - Basic linear algebra.ipynb
+++ b/10 - Basic linear algebra.ipynb
@@ -25,9 +25,9 @@
      "data": {
       "text/plain": [
        "3×3 Matrix{Int64}:\n",
-       " 3  1  3\n",
-       " 1  1  2\n",
-       " 3  2  2"
+       " 1  3  2\n",
+       " 2  4  2\n",
+       " 1  3  4"
       ]
      },
      "execution_count": 1,
@@ -88,9 +88,9 @@
      "data": {
       "text/plain": [
        "3-element Vector{Float64}:\n",
-       " 7.0\n",
-       " 4.0\n",
-       " 7.0"
+       " 6.0\n",
+       " 8.0\n",
+       " 8.0"
       ]
      },
      "execution_count": 3,
@@ -119,9 +119,9 @@
      "data": {
       "text/plain": [
        "3×3 adjoint(::Matrix{Int64}) with eltype Int64:\n",
-       " 3  1  3\n",
-       " 1  1  2\n",
-       " 3  2  2"
+       " 1  2  1\n",
+       " 3  4  3\n",
+       " 2  2  4"
       ]
      },
      "execution_count": 4,
@@ -149,9 +149,9 @@
      "data": {
       "text/plain": [
        "3×3 transpose(::Matrix{Int64}) with eltype Int64:\n",
-       " 3  1  3\n",
-       " 1  1  2\n",
-       " 3  2  2"
+       " 1  2  1\n",
+       " 3  4  3\n",
+       " 2  2  4"
       ]
      },
      "execution_count": 5,
@@ -180,9 +180,9 @@
      "data": {
       "text/plain": [
        "3×3 Matrix{Int64}:\n",
-       " 19  10  17\n",
-       " 10   6   9\n",
-       " 17   9  17"
+       "  6  14  10\n",
+       " 14  34  26\n",
+       " 10  26  24"
       ]
      },
      "execution_count": 6,
@@ -241,9 +241,9 @@
      "data": {
       "text/plain": [
        "3×2 Matrix{Float64}:\n",
-       " 0.01259    0.562346\n",
-       " 0.571931   0.208287\n",
-       " 0.0761351  0.507003"
+       " 0.71413   0.850785\n",
+       " 0.193055  0.91987\n",
+       " 0.642033  0.381811"
       ]
      },
      "execution_count": 8,
@@ -264,8 +264,8 @@
      "data": {
       "text/plain": [
        "2-element Vector{Float64}:\n",
-       "  2.3722998636787898\n",
-       " 12.85556853172185"
+       " 4.833265899791781\n",
+       " 6.142112733414594"
       ]
      },
      "execution_count": 9,
@@ -293,9 +293,9 @@
      "data": {
       "text/plain": [
        "3×2 Matrix{Float64}:\n",
-       " 0.682093  0.682093\n",
-       " 0.745287  0.745287\n",
-       " 0.698837  0.698837"
+       " 0.733847  0.733847\n",
+       " 0.883199  0.883199\n",
+       " 0.173681  0.173681"
       ]
      },
      "execution_count": 10,
@@ -317,8 +317,8 @@
      "data": {
       "text/plain": [
        "2-element Vector{Float64}:\n",
-       " 4.190527048390038\n",
-       " 4.190527048390039"
+       " 4.766727381468708\n",
+       " 4.766727381468709"
       ]
      },
      "execution_count": 11,
@@ -346,8 +346,8 @@
      "data": {
       "text/plain": [
        "2×3 Matrix{Float64}:\n",
-       " 0.692218  0.193236   0.153774\n",
-       " 0.127852  0.0359394  0.063034"
+       " 0.639607  0.759377  0.934994\n",
+       " 0.67242   0.861383  0.616764"
       ]
      },
      "execution_count": 12,
@@ -369,9 +369,9 @@
      "data": {
       "text/plain": [
        "3-element Vector{Float64}:\n",
-       " -4.139674407706176\n",
-       " -0.9797338415813472\n",
-       " 23.563074056363842"
+       " 0.20272850867362163\n",
+       " 0.29033791157921585\n",
+       " 0.007993432076128482"
       ]
      },
      "execution_count": 13,
@@ -428,10 +428,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dot_v = v'v"
+   ]
   },
   {
    "cell_type": "code",
@@ -465,14 +478,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3×3 Matrix{Int64}:\n",
+       " 1  2  3\n",
+       " 2  4  6\n",
+       " 3  6  9"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "outer_v = v * v'"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,14 +520,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element Vector{Int64}:\n",
+       " 0\n",
+       " 0\n",
+       " 0"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "using LinearAlgebra\n",
+    "cross_v = LinearAlgebra.cross(v, v)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -517,6 +563,13 @@
    "source": [
     "@assert cross_v == [0, 0, 0]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
