--- a/11 - Factorizations and other fun.ipynb
+++ b/11 - Factorizations and other fun.ipynb
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -888,14 +888,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5-element Vector{Float64}:\n",
+       " -128.4932276480215\n",
+       "  -55.887784553056875\n",
+       "   42.75216727931892\n",
+       "   87.16111477514524\n",
+       "  542.4677301466141"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A =\n",
+    "[\n",
+    " 140   97   74  168  131\n",
+    "  97  106   89  131   36\n",
+    "  74   89  152  144   71\n",
+    " 168  131  144   54  142\n",
+    " 131   36   71  142   36\n",
+    "]\n",
+    "\n",
+    "A_eigv = eigvals(A)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -910,7 +937,24 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "AssertionError: A_eigv == [-128.49322764802145, -55.887784553056875, 42.7521672793189, 87.16111477514521, 542.4677301466143]",
+     "output_type": "error",
+     "traceback": [
+      "AssertionError: A_eigv == [-128.49322764802145, -55.887784553056875, 42.7521672793189, 87.16111477514521, 542.4677301466143]",
+      "",
+      "Stacktrace:",
+      " [1] top-level scope",
+      "   @ In[14]:1",
+      " [2] eval",
+      "   @ .\\boot.jl:373 [inlined]",
+      " [3] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "   @ Base .\\loading.jl:1196"
+     ]
+    }
+   ],
    "source": [
     "@assert A_eigv ==  [-128.49322764802145, -55.887784553056875, 42.7521672793189, 87.16111477514521, 542.4677301466143]"
    ]
@@ -925,14 +969,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5×5 Diagonal{Float64, Vector{Float64}}:\n",
+       " -128.493     ⋅        ⋅        ⋅         ⋅ \n",
+       "     ⋅     -55.8878    ⋅        ⋅         ⋅ \n",
+       "     ⋅        ⋅      42.7522    ⋅         ⋅ \n",
+       "     ⋅        ⋅        ⋅      87.1611     ⋅ \n",
+       "     ⋅        ⋅        ⋅        ⋅      542.468"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A_diag = round.(Diagonal(A_eigv), sigdigits=6)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -966,14 +1028,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5×5 LowerTriangular{Int64, Matrix{Int64}}:\n",
+       " 140    ⋅    ⋅    ⋅   ⋅\n",
+       "  97  106    ⋅    ⋅   ⋅\n",
+       "  74   89  152    ⋅   ⋅\n",
+       " 168  131  144   54   ⋅\n",
+       " 131   36   71  142  36"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A_lowertri = LowerTriangular(A)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -996,20 +1076,27 @@
     " 168  131  144   54   0;\n",
     " 131   36   71  142  36]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.6.0",
+   "display_name": "Julia 1.7.1",
    "language": "julia",
-   "name": "julia-1.6"
+   "name": "julia-1.7"
   },
   "language": "Julia",
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.6.3"
+   "version": "1.7.1"
   }
  },
  "nbformat": 4,
