--- a/9 - Julia is fast.ipynb
+++ b/9 - Julia is fast.ipynb
@@ -59,32 +59,32 @@
      "data": {
       "text/plain": [
        "10000000-element Vector{Float64}:\n",
-       " 0.6745119379054763\n",
-       " 0.334707025614577\n",
-       " 0.4652717513824469\n",
-       " 0.025378545156990562\n",
-       " 0.616448801038423\n",
-       " 0.1979851442932603\n",
-       " 0.3715908561232637\n",
-       " 0.25488755696575316\n",
-       " 0.9431915735305338\n",
-       " 0.8832643902109472\n",
-       " 0.4996338368361759\n",
-       " 0.37111055872947896\n",
-       " 0.8169626538416961\n",
+       " 0.8127835898401081\n",
+       " 0.18374528944730106\n",
+       " 0.9724112709439718\n",
+       " 0.6044708866625246\n",
+       " 0.44006065099187974\n",
+       " 0.34853112310515977\n",
+       " 0.36369003163938673\n",
+       " 0.4962437975206754\n",
+       " 0.4726512197132403\n",
+       " 0.6706139454863798\n",
+       " 0.2486692993798426\n",
+       " 0.1769881486962258\n",
+       " 0.41640610758410423\n",
        " ⋮\n",
-       " 0.16553875536094198\n",
-       " 0.7341971015423325\n",
-       " 0.5301652311565841\n",
-       " 0.9518356579388842\n",
-       " 0.6041591318727966\n",
-       " 0.6876247158025026\n",
-       " 0.004072979930887621\n",
-       " 0.7781806829409383\n",
-       " 0.7179680963395814\n",
-       " 0.0591055542994845\n",
-       " 0.9451515969772792\n",
-       " 0.6146951799557818"
+       " 0.9888275496593771\n",
+       " 0.46797140318845387\n",
+       " 0.9824143662342519\n",
+       " 0.6864721924349481\n",
+       " 0.8402642045431707\n",
+       " 0.9604123245987658\n",
+       " 0.7247647996910614\n",
+       " 0.31195905177953664\n",
+       " 0.3026969833182842\n",
+       " 0.3368731390923876\n",
+       " 0.7133835136365418\n",
+       " 0.6704322505280458"
       ]
      },
      "execution_count": 1,
@@ -104,7 +104,7 @@
     {
      "data": {
       "text/plain": [
-       "5.000406093458154e6"
+       "4.999389248151626e6"
       ]
      },
      "execution_count": 2,
@@ -139,13 +139,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.003072 seconds (1 allocation: 16 bytes)\n"
+      "  0.004292 seconds (1 allocation: 16 bytes)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "5.000406093458154e6"
+       "4.999389248151626e6"
       ]
      },
      "execution_count": 3,
@@ -166,13 +166,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.003501 seconds (1 allocation: 16 bytes)\n"
+      "  0.004227 seconds (1 allocation: 16 bytes)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "5.000406093458154e6"
+       "4.999389248151626e6"
       ]
      },
      "execution_count": 4,
@@ -193,13 +193,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.003498 seconds (1 allocation: 16 bytes)\n"
+      "  0.003746 seconds (1 allocation: 16 bytes)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "5.000406093458154e6"
+       "4.999389248151626e6"
       ]
      },
      "execution_count": 5,
@@ -229,19 +229,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m\u001b[1m    Updating\u001b[22m\u001b[39m registry at `~/.julia/registries/General`\n",
-      "\u001b[32m\u001b[1m    Updating\u001b[22m\u001b[39m git-repo `https://github.com/JuliaRegistries/General.git`\n",
-      "\u001b[32m\u001b[1m    Updating\u001b[22m\u001b[39m registry at `~/.julia/registries/JuliaPOMDP`\n",
-      "\u001b[32m\u001b[1m    Updating\u001b[22m\u001b[39m git-repo `https://github.com/JuliaPOMDP/Registry`\n",
+      "\u001b[32m\u001b[1m    Updating\u001b[22m\u001b[39m registry at `C:\\Users\\drtghosh\\.julia\\registries\\General.toml`\n",
       "\u001b[32m\u001b[1m   Resolving\u001b[22m\u001b[39m package versions...\n",
-      "\u001b[32m\u001b[1m   Installed\u001b[22m\u001b[39m BenchmarkTools ─ v1.1.1\n",
-      "\u001b[32m\u001b[1m    Updating\u001b[22m\u001b[39m `~/Desktop/Introduction-to-Julia/Project.toml`\n",
-      " \u001b[90m [6e4b80f9] \u001b[39m\u001b[92m+ BenchmarkTools v1.1.1\u001b[39m\n",
-      "\u001b[32m\u001b[1m    Updating\u001b[22m\u001b[39m `~/Desktop/Introduction-to-Julia/Manifest.toml`\n",
-      " \u001b[90m [6e4b80f9] \u001b[39m\u001b[92m+ BenchmarkTools v1.1.1\u001b[39m\n",
-      "\u001b[32m\u001b[1mPrecompiling\u001b[22m\u001b[39m project...\n",
-      "\u001b[32m  ✓ \u001b[39mBenchmarkTools\n",
-      "1 dependency successfully precompiled in 2 seconds (118 already precompiled)\n"
+      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `C:\\Users\\drtghosh\\Documents\\Academics\\Courses\\Julia\\Introduction-to-Julia\\Project.toml`\n",
+      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `C:\\Users\\drtghosh\\Documents\\Academics\\Courses\\Julia\\Introduction-to-Julia\\Manifest.toml`\n"
      ]
     }
    ],
@@ -272,16 +263,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: redefinition of constant Clib. This may fail, cause incorrect answers, or produce other errors.\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "c_sum (generic function with 1 method)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,18 +313,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "5.000406093458116e6"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "LoadError",
+     "evalue": "could not load library \"C:\\Users\\drtghosh\\AppData\\Local\\Temp\\jl_4G9CrMGYU7\"\n%1 is not a valid Win32 application. ",
+     "output_type": "error",
+     "traceback": [
+      "could not load library \"C:\\Users\\drtghosh\\AppData\\Local\\Temp\\jl_4G9CrMGYU7\"\n%1 is not a valid Win32 application. ",
+      "",
+      "Stacktrace:",
+      " [1] c_sum(X::Vector{Float64})",
+      "   @ Main .\\In[11]:24",
+      " [2] top-level scope",
+      "   @ In[12]:1",
+      " [3] eval",
+      "   @ .\\boot.jl:373 [inlined]",
+      " [4] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "   @ Base .\\loading.jl:1196"
+     ]
     }
    ],
    "source": [
@@ -4829,15 +4835,15 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Julia 1.6.0",
+   "display_name": "Julia 1.7.1",
    "language": "julia",
-   "name": "julia-1.6"
+   "name": "julia-1.7"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.6.0"
+   "version": "1.7.1"
   },
   "toc": {
    "colors": {
